 -- Jake added @flag and flag_name. Based on RhostMUSH's.
 -- Jake added train from RhostMUSH.
 -- Jake added itext() and inum() functions. Equivalent to ## and #@, for multiple
    levels of iter(). Idea from PennMUSH.
 -- Added CHR() from PennMUSH.
 -- Added ORD() from PennMUSH.
 -- Added STRIPACCENTS() from PennMUSH.
 -- Added NOACCENTS flag from PennMUSH.
 -- Added ACCENT() from PennMUSH.

Bug Fixes:
~~~~~~~~~
 -- @mvattr would erase source attribute even if it wasn't allowed to write to
    any of its destinations.
 -- Fixed isnum() with exponents. Uninitialized structure.
 -- Added @dbck/full. Allows in-game access to an option previously only 
    available via dbconvert -c. Patch from Jake.
 -- Rework of dbck routines. More thorough checking and removed some God-only
    crash issues. Patch from Jake.
 -- Fixed entire class of bugs from MUX 1.x that show themselves to one degree
    or another in nearly every part of the server. The issue was first visible
    with enter locks on zones.
 -- Fixed ancient filter() bug where only a prefix of '1' was counted as true.
    Fixed by Raevnos.
 -- Fix uninitialized variable in a utility object used by LROOMS(). Also a
    bug in MUX 2.0 and MUX 2.1. A patch for those will be provided separately.
 -- Fixed SIGSEGV bug in ANSI_String_Copy() which is used by CENTER/LJUST/RJUST
    softcode functions.
 -- Limit how much work can be done in a regular expression.
 -- Bug #438: When a player is @toaded or destroyed, they are not cleaned off
    the @malias. Fixed by Jake.
 -- Adding an additional alias for a channel cleared the comtitle for that
    channel. Fixed by Jake.
 -- Visible() could be used to detect dark wizards.
 -- Bug #597, @mail/proof and blank message. Fixed by Jake.
 -- Idle time didn't update while in an @program. Fixed by Jake.

Performance Enhancements:
~~~~~~~~~~~~~~~~~~~~~~~~
 -- Optimized check_access() hardcode function which is frequently used.