@@ -44,7 +44,8 @@ alias @entra    @entrances
 alias @entran   @entrances
 alias @entranc  @entrances
 alias @entrance @entrances
-alias @extansi  @ansiname
+alias @extansi  @nameaccent
+alias @ansiname @nameaccent
 alias @fe       @femit
 alias @fem      @femit
 alias @femi     @femit
